--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/gh/needleworm/needleworm.github.io/src/components/books.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
