--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8" />
     <meta name="theme-color" content="#000000" />
 
-    <title>반병현 (Byunghyun Ban)</title>
+    <title>균형감각(Proj. Sense of Balance)</title>
     <meta name="description" content="반병현의 포트폴리오 - 저서, 논문, 특허 등"/>
     <meta name="author" content="반병현(Byunghyun Ban)">
 
