--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N1GJ70ELXP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag = () => {dataLayer.push(arguments);}
+      function gtag() {dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-N1GJ70ELXP');
     </script>
 
