--- a/public/index.html
+++ b/public/index.html
@@ -17,21 +17,21 @@
     <meta name="theme-color" content="#000000" />
 
     <title>균형감각(Proj. Sense of Balance)</title>
-    <meta name="description" content="반병현의 포트폴리오 - 저서, 논문, 특허 등"/>
+    <meta name="description" content="AI족집게 수능 영단어! 매일매일 퀴즈를 풀며 수능을 정복해요!"/>
     <meta name="author" content="반병현(Byunghyun Ban)">
 
     <!-- 미리보기 카드 -->
     <!-- 트위터 -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="반병현(Byunghyun Ban)">
-    <meta name="twitter:description" content="반병현의 포트폴리오 - 저서, 논문, 특허 등">
+    <meta name="twitter:title" content="균형감각(Proj. Sense of Balance)">
+    <meta name="twitter:description" content="AI족집게 수능 영단어! 매일매일 퀴즈를 풀며 수능을 정복해요!">
     <meta name="twitter:image" content="%PUBLIC_URL%/preview.jpg" />
 
     <!-- 일반 -->
     <meta property="og:type" content="article">
     <meta property="og:type" content="blog">
-    <meta property="og:title" content="반병현(Byunghyun Ban)">
-    <meta property="og:description" content="반병현의 포트폴리오 - 저서, 논문, 특허 등">
+    <meta property="og:title" content="균형감각(Proj. Sense of Balance)">
+    <meta property="og:description" content="AI족집게 수능 영단어! 매일매일 퀴즈를 풀며 수능을 정복해요!">
     <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" />
 
     <!-- Favicon -->
