--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-kr">
   <head>
     <!-- Naver Search Console -->
     <meta name="naver-site-verification" content="5ef76316bb52953535a43d307f847a9d5c2c393c" />
