--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,19 @@
     <!-- Naver Search Console -->
     <meta name="naver-site-verification" content="5ef76316bb52953535a43d307f847a9d5c2c393c" />
 
+    <!-- Event snippet for Website traffic conversion page -->
+    <script>
+      gtag('event', 'conversion', {'send_to': 'AW-869459612/_ieBCLym-_QBEJzNy54D'});
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N1GJ70ELXP"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GP6DD3D3FC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag() {dataLayer.push(arguments);}
+      function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-N1GJ70ELXP');
+
+      gtag('config', 'G-GP6DD3D3FC');
     </script>
 
     <meta charset="utf-8" />
